--- a/styles.css
+++ b/styles.css
@@ -22,3 +22,30 @@ input{
     border: 3px solid #ccc;
     outline: none !important;
 }
+
+/* validation styles */
+
+input.valid {
+    border-color: #36cc36;
+}
+
+input.invalid {
+    border-color: orangered;
+}
+
+input + p {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.9 em;
+    font-weight: bold;
+    text-align: center;
+    margin: 0, 10px;
+    color: orangered;
+    opacity: 0;
+    height: 0;
+}
+
+input.invalid + p {
+    opacity: 1;
+    height: auto;
+    margin-bottom: 20px;
+}
